# super-rotary-phone

./: nvidia-api.txt  req.txt  vision_rag.py
Developer_Agent/: developer.ipynb  developer.py  developer1.ipynb
Developer_Agent/code_generation/run_20250222_134659/: generation_summary.txt
New Work/: SDLC research paper (1).docx  lesson2 (1).ipynb  lesson2_u.ipynb  sdlc.md
RAG_gyan/: chunker_factory.py  document_loader.py  rag_debugger.py  rag_pipeline.py  reranking_model.py  vector_store.py
RAG_gyan/api/: rag.py
RAG_gyan/vector_databases/: config.json
RAG_gyan/vector_databases/weaviate/: docker-compose.yml
agentic_mine/: code_generator.py  core 4.ipynb  developer.py  report-generation.ipynb  req_phase.ipynb  self_reflection shree.docx  test_scenario_generator (1).py  test_scenario_inference (1).py
deep_research/: Concise Self.docx  Detailed Self-Reflection (July 2024 - Present).docx  deep_search.py  requirements.txt
digital_human_assistant/: audio2face_client.py  config.py  docker-compose.yml  llm_module.py  main.py  rag_pipeline.py  tts_module.py
digital_human_assistant/utils/: audio_utils.py
docs/: 8 minutes.docx  SDLC_m (1).docx  rag types.docx
docs/stuff/: __init__.py  database.py  dependency.py  developer_second_iter.ipynb  graphs.py  main.py  models.py  offline_developer.ipynb  offline_test_scenario.ipynb  proper_code.ipynb  routes.py  schema.py  test_main.py  tulsi.ipynb
docs/stuff/New folder/: inference.py  main.py  tech.xlsx  tech1.xlsx
docs/stuff/New folder (2)/: embedings_geneartor.py  initiate_db.py  prompt_optimizer.py  rag_pipeline.py  test_scenario_generator.py
docs/stuff/integrated_solution_20250310_232624/: RELATIONSHIPS.md  US_141_code.py  US_142_code.py  US_145_code.py  US_146_code.py  enhanced_api_documentation.json
docs/stuff/integrated_solution_20250311_022136/: README.md  RELATIONSHIPS.md  US_142_code.py  US_145_code.py  US_146_code.py  US_147_code.py  __init__.py  enhanced_api_documentation.json  integrated_solution.py  setup.py
docs/stuff/test_cases_20250311_025044/: summary_report.json  summary_report.md
docs/stuff/test_scenarios_20250311_025759/: summary_report.json  summary_report.md
gyan/gyan-platform-backend-feature-initial/gyan-platform-backend-feature-initial/assests/usecases/automation/Cpp/Test_Files/UTCProject/: CMakeLists.txt
gyan/gyan-platform-backend-feature-initial/gyan-platform-backend-feature-initial/assests/usecases/automation/Cpp/Test_Files/UTCProject/src/main/src/: program.cpp
gyan/gyan-platform-backend-feature-initial/gyan-platform-backend-feature-initial/assests/usecases/automation/Cpp/Test_Files/UTCProject/src/test/src/: ProgramTest.cpp
gyan/gyan-platform-backend-feature-initial/gyan-platform-backend-feature-initial/assets/automation/Cpp/Folder/: CMakeLists.txt
my work/: Affinity Propagation ml 1.docx  Development Automation Analysis.docx  END to END Pipeline For Code Analysis and Generation.pptx  Luminescence Analysis in Night Scenes.pptx  Mlops_240813_week_2 (1) (1).pptx  Nvidia Omniverse_v1.pptx  RAG.docx  RAG.pptx  SDLC research paper.docx  Test Case Comparison v2.pptx  Test Scenario Generator Script Analysis.docx  Types_of_RAG Documentation 1.docx  Uc1 new.ipynb  VED_POC_PPT1 [Autosaved].pptx  Wrote a presentation on Advancing LLM Efficiency.docx  aggloclust.ipynb  algorithm-comparison-table.md  board-adorable-buffoon.csv  chi_sq.py  gmm_crosval.py  inf 2.py  inference 1.py  inference2.py  kmeans_cluster.py  llama3_8b_inst_rag 2.py  min_max.py  plot3.py  sliding_window.py  transformer_iter_complex_(save)_working1iter.ipynb
my work/rrr/: document_loader.py  main.py  rag_complete.py  rag_inference.py  rag_interactive.py  rag_pipeline.py  run_with_azure.py  vector_search.py
rrr/: azure_setup.py  embedings.py  enhanced_rag.py  prompt_optimizer.py  rag_types.py  raptor_advanced.py  run_inference.py  run_rag.bat  vector_store.py
vector_db/: chroma.sqlite3
vector_db/d017d7b7-723d-4388-8d81-8d8b71e6a901/: index_metadata.pickle
vision_rag/: interactive_main.py  main.py  requirements.txt
vision_rag/config/: settings.py
vision_rag/scripts/: index_images.py  index_pdf.py  index_single_image.py  manage_database.py  query_by_image.py  query_by_text.py
vision_rag/src/: generator.py  image_processor.py  pdf_processor.py  pipeline.py  retriever.py  vector_store.py
vision_rag/utils/: logger.py
(+551 files in other folders)
